# mcp-command

./: .gitignore  AGENTS.md  Cargo.toml  README.md
cmd-lib/: Cargo.toml
cmd-lib/poc/dioxus/: .gitignore  Cargo.toml  Dioxus.toml  index.html
cmd-lib/poc/dioxus/src/: main.rs
cmd-lib/src/: lib.rs
cmd-lib/tests/: dx.rs
docs/: PRD-mcp-command.md
mcp-command/: Cargo.toml
mcp-command/src/: main.rs
mcp-lib/: Cargo.toml
mcp-lib/src/: lib.rs
